updated package.json file

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "Simple backend",
+  "description": "Simple node and express backend",
   "main": "index.js",
+  "repository": "github:mannyhenri/node-docker",
   "scripts": {
     "start": "nodemon ./index.js --exec babel-node -e js"
   },
